Another try to fix overflow bug

--- a/src/styles/contact/index.scss
+++ b/src/styles/contact/index.scss
@@ -1,7 +1,6 @@
 .section--contact {
     background: #eee;
     position: relative;
-    overflow-x: hidden;
 
     &::before {
         content: '';
