--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -29,3 +29,7 @@ html {
 body {
     color: $dark-text;
 }
+
+main {
+    overflow-x: hidden;
+}
